<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:paddingTop="75dp">

<RelativeLayout android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp" android:paddingRight="10dp"
        android:id="@+id/back_layout">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll_ships">

            <TextView
                android:layout_width="@dimen/new_rol_text_width"
                android:layout_height="wrap_content"
                android:text="@string/new_rol_embarcacion"
                android:layout_gravity="center"
                android:textColor="@color/text_colors"
                android:layout_weight="0"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:textColor="@color/text_colors"
                android:id="@+id/sp_nombre_barco">

            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="2dp"
            android:id="@+id/ll_waypoints"
            android:layout_below="@id/ll_ships">

            <TextView
                android:layout_width="@dimen/new_rol_text_width"
                android:layout_height="wrap_content"
                android:text="@string/new_rol_destino"
                android:textColor="@color/text_colors"
                android:layout_gravity="center"
                android:layout_weight="0"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:textColor="@color/text_colors"
                android:id="@+id/sp_destino"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="2dp"
            android:id="@+id/ll_salida"
            android:layout_below="@id/ll_waypoints">

            <TextView
                android:layout_width="@dimen/new_rol_text_width"
                android:layout_height="wrap_content"
                android:text="@string/new_rol_salida"
                android:textColor="@color/text_colors"
                android:layout_gravity="center"
                android:layout_weight="0"/>


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_salida"
                android:layout_weight="3"
                android:hint="Hora"
                android:textColorHint="@color/divider"
                android:textColor="@color/text_colors"
                android:textAlignment="textEnd"
                android:singleLine="true"
                android:layout_gravity="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="10dp"
            android:id="@+id/ll_regreso"
            android:layout_below="@id/ll_salida">

            <TextView
                android:layout_width="@dimen/new_rol_text_width"
                android:layout_height="wrap_content"
                android:text="@string/new_rol_regreso_estimado"
                android:textColor="@color/text_colors"
                android:layout_gravity="center"
                android:layout_weight="0"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_regreso"
                android:layout_weight="3"
                android:hint="Hora"
                android:textColorHint="@color/divider"
                android:textColor="@color/text_colors"
                android:textAlignment="textEnd"
                android:singleLine="true"
                android:layout_gravity="end"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/primary"
            android:layout_below="@id/ll_regreso"
            android:id="@+id/ll_separator1"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="2dp"
            android:id="@+id/ll_crew_dni"
            android:layout_below="@id/ll_separator1">

            <TextView
                android:layout_width="@dimen/new_rol_text_width"
                android:layout_height="wrap_content"
                android:text="@string/new_rol_nombreyapellido"
                android:layout_gravity="center"
                android:textColor="@color/text_colors"
                android:layout_weight="0"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:singleLine="true"
                android:id="@+id/et_nombre_crew"
                android:layout_marginLeft="5dp"
                android:textColor="@color/text_colors">
                <requestFocus />
            </EditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="2dp"
            android:id="@+id/ll_crew_nombre"
            android:layout_below="@id/ll_crew_dni">

            <TextView
                android:layout_width="@dimen/new_rol_text_width"
                android:layout_height="wrap_content"
                android:text="@string/new_rol_dni_acompañante"
                android:layout_gravity="center"
                android:textColor="@color/text_colors"
                android:layout_weight="0"/>

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:id="@+id/et_crew_dni"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="8"
                android:layout_marginLeft="5dp"
                android:textColor="@color/text_colors"/>

            <ImageView
                android:src="@drawable/plus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="2dp"
                android:id="@+id/add_crew"
                android:scaleType="centerCrop"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_listview_crew"
            android:layout_below="@id/ll_crew_nombre"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/lv_crew">

            </ListView>

        </LinearLayout>


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/transparent_grey"
        android:layout_marginTop="20dp"
        android:layout_below="@id/back_layout">

        <Button
            android:id="@+id/btn_guardar"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_rol_guardar"
            android:background="@color/accent"
            android:textColor="@color/text_colors"
            android:textSize="25sp"/>
    </LinearLayout>

</RelativeLayout>
</ScrollView>