<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:paddingTop="20dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/boat_white"
        android:id="@+id/circleView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="90dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#B3FFFFFF">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="46sp"
                android:layout_gravity="center"
                android:textColor="@color/accent"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="225dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#AAFFFFFF">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/user"
                android:layout_weight="0"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="textVisiblePassword"
                android:textSize="24sp"
                android:hint="Usuario"
                android:id="@+id/txtUsuario"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="5dp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/lock"
                android:layout_weight="0"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_weight="2"
                android:hint="Clave"
                android:inputType="textPassword"
                android:id="@+id/txtClave"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_remember"
                android:paddingRight="20dp"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textColor="#666666"
                android:gravity="right"
                android:layout_gravity="center_horizontal"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginBottom="5dp"
                android:id="@+id/switch_remember"/>

        </LinearLayout>

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/accent"
            android:text="@string/login_ingresar"
            android:textSize="26sp"
            android:fontFamily="sans-serif-medium"
            style="@style/PrimaryDarkText"
            android:id="@+id/btnIngresar"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
